tests/snapshots/snapshots__error_snapshots@err_try_object_setter.zts.snap
---
source: tests/snapshots.rs
expression: diags
input_file: tests/fixtures/errors/err_try_object_setter.zts
---
error: `?` cannot be used in a setter: setters cannot return a value, so there is no way to propagate the `Err`
 --> tests/fixtures/errors/err_try_object_setter.zts:6:15
  |
6 |     const p = g()?;
  |               ^^^^
