tests/snapshots/snapshots__error_snapshots@err_try_top_level.zts.snap
---
source: tests/snapshots.rs
expression: diags
input_file: tests/fixtures/errors/err_try_top_level.zts
---
error: `?` needs an enclosing function to return the `Err` from; it cannot be used at module top level or in a class static block
 --> tests/fixtures/errors/err_try_top_level.zts:3:11
  |
3 | const x = f()?;
  |           ^^^^
