tests/snapshots/snapshots__error_snapshots@err_ts_enum.zts.snap
---
source: tests/snapshots.rs
expression: diags
input_file: tests/fixtures/errors/err_ts_enum.zts
---
error: TypeScript `enum` is not allowed in zts; zts `enum` (tagged unions) replaces it. This will become zts enums-with-data in a later phase.
 --> tests/fixtures/errors/err_ts_enum.zts:1:1
  |
1 | / enum Color {
2 | |   Red,
3 | |   Green,
4 | | }
  | |_^
